--- a/frontend/src/components/header/header.css
+++ b/frontend/src/components/header/header.css
@@ -4,12 +4,17 @@
     display: flex;
     justify-content: center;
     position: relative;
+    z-index: 1;
 }
 
 .headerContainer{
     width:100%;
     max-width: 1024px;
     margin: 20px 0px 100px 0px;
+}
+
+.headerContainer.listMode{
+    margin: 20px 0px 0px 0px;
 }
 
 .headerList{
@@ -82,6 +87,7 @@
 .date{
     position: absolute;
     top: 50px; 
+    z-index: 2;
 }
 
 .options{
@@ -92,6 +98,7 @@
     border-radius: 5px;
     box-shadow: 0px 0px 10px -5px rgba(0,0,0,0.4);
     -webkit-box-shadow: 10px 10px -5px rgba(0,0,0,0.4);
+    z-index: 2;
 }
 
 .optionItem{
